--- a/index.html
+++ b/index.html
@@ -391,36 +391,89 @@
 
                     <br>
                     <div id="carouselExampleControls" class="container-custome carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                          </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img class="img-fluid" src="img/uidesign1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Just Dial Learning Center</h5>
+                                <p>Mobile UI Mockups</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
                             <img class="d-block w-100" src="img/uidesign2.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Maxidoo Hotel Management app</h5>
+                                <p>UI designing and prototype using Adobe xd</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
                             <img class="d-block w-100" src="img/uidesign3.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Zapurse Money transfer and ticket booking</h5>
+                                <p>UI designing and prototype using Adobe xd</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
                             <img class="d-block w-100" src="img/uidesign4.jpg" alt="Fourth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Just Dial help desk chat bot</h5>
+                                <p>Mockups UI designing and prototype using Adobe xd</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign5.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign5.jpg" alt="Fifth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>eSahyog</h5>
+                                <p>UI designing and prototype using Adobe xd and illustrator</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign6.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign6.jpg" alt="Sixth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Zapurse Website</h5>
+                                <p>UI designing and Frontend Development</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign7.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign7.jpg" alt="Seventh slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>E-measurment desktop application for MP Police records</h5>
+                                <p>UI designing and Frontend Development</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign8.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign8.jpg" alt="Eighth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Trackvec Vehicle tracking device dealer</h5>
+                                <p>Frontend Development</p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign9.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign9.jpg" alt="Ninth">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Graphic and banner designing for social media</h5>
+                                <p>Design using illistrator and photoshop </p>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/uidesign10.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="img/uidesign10.jpg" alt="Tenth">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Maxidoo Hotel Management desktop application</h5>
+                                <p>UI designing and prototype using Adobe xd</p>
+                            </div>
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
