--- a/index.html
+++ b/index.html
@@ -507,6 +507,19 @@
                             </p>
 
                         </div>
+                        <div class="col-lg-4 col-md-6">
+
+                            <div class="view overlay zoom z-depth-2">
+
+                                <img src="img/justdialLC.jpg" class="img-fluid">
+
+                            </div>
+
+                            <p class="text-uppercase text-center font-weight-bold blue-grey-text mt-4 mb-4">Just Dial learning center
+
+                            </p>
+
+                        </div>
 
                         <div class="col-lg-4 col-md-6">
 
