changes in HTML file

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <h2 class="text-center custText text-uppercase my-5 pt-5 wow fadeIn" data-wow-delay="0.2s">About me</h2>
 
-                <p class="text-center w-responsive mx-auto wow fadeIn my-5" style="font-size: 18px; font-weight: 400;" data-wow-delay="0.2s">2+ years’ Experience as UI/UX designer, Frontend Developer, 2 years Experience in Web and graphic designing</p>
+                <p class="text-center w-responsive mx-auto wow fadeIn my-5" style="font-size: 18px; font-weight: 400;" data-wow-delay="0.2s">3+ years’ Experience as UI/UX designer, Frontend Developer, 2 years Experience in Web and graphic designing</p>
 
                 <div class="row features-big text-center wow fadeIn" data-wow-delay="0.4s">
 
@@ -199,11 +199,25 @@
 
                                 <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
 
+                                    <h5 class="font-weight-bold mb-3">UI/UX designer and HTML developer</h5>
+
+                                </div>
+
+                                <p class="font-weight-bold ml-1 dark-grey-text mb-2">NOctober, 2022 - Present</p>
+
+                                <p class="mb-0 ml-1 light-grey-text">Dynpro India PVT Limited(HPE)</p>
+
+                            </blockquote>
+
+                            <blockquote class="blockquote bq-custome mb-4">
+
+                                <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
+
                                     <h5 class="font-weight-bold mb-3">UI/UX designer</h5>
 
                                 </div>
 
-                                <p class="font-weight-bold ml-1 dark-grey-text mb-2">july, 2021 - Present</p>
+                                <p class="font-weight-bold ml-1 dark-grey-text mb-2">july, 2021 - June 2022</p>
 
                                 <p class="mb-0 ml-1 light-grey-text">Just Dial</p>
 
