--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
                                 </div>
 
-                                <p class="font-weight-bold ml-1 dark-grey-text mb-2">july, 2021 - June 2022</p>
+                                <p class="font-weight-bold ml-1 dark-grey-text mb-2">july, 2021 - June 2022(1 year)</p>
 
                                 <p class="mb-0 ml-1 light-grey-text">Just Dial</p>
 
